csv loading room details for scale AB#39